# nano

./: .gitignore  ablation_set_0a.py  assigner_test.py  convert_legacy_weights.py  dataloader_test.py  desk.py  detect.py  evaluator.py  export.py  export_dct_test.py  live_data.py  mbv3.onnx  model_sheet.md  model_zoo_test.py  playground.py  readme.md  realtime_test.py  rt.py  run.py  test.py  test_activation.py  test_assignment.py  test_backward.py  test_dataloader.py  test_dataset.py  test_dataset_preprocess.py  test_inference.py  test_inference_nms.py  test_prediction.py  test_queue.py  test_realtime.py  test_realtime_inference.py  test_target_assignment.py  test_xnnc_build.py  tmp.py  tmp.txt  tr_finetune_darkness.py  tr_finetune_dev_0.py  tr_scratch.py  tr_scratch_dev_0.py  (+8 more)
configs/: coc-def.yaml  coc-finetune-a.yaml  coc-l.yaml  coc-m.yaml  coc-mega.yaml  coc-misc-s.yaml  coc-s.yaml  coc-x.yaml  coco-val.yaml  hyp.finetune-nomixup.yaml  hyp.finetune-nomosaic.yaml  hyp.finetune-weakmosaic.yaml  hyp.finetune.yaml
data/: coco-s+indoor.yaml  coco-s.yaml
deprecated/: requirements.txt  test_dataloader.py  test_inference_nms.py  test_target_assignment.py  train.py
deprecated/xnnc/cpp_layers/slice/: CMakeLists.txt  slice.hpp
docs/: model_sheet.md
experiments/: (closed) issue_office_chair_false_detection.ipynb  finetune_coco_exdark.py  finetune_coco_hgp.py  finetune_coco_hgp_targets_only.py  finetune_coco_indoor_targets_only.py  finetune_hgp.py  full_body.ipynb  hand_det_issue.ipynb  issue_aggressive_detection.ipynb  issue_hand_detected_as_human.ipynb  (+3 more)
(+732 files in other folders)
